move up, move down functions added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    
+
     <title>Document</title>
 </head>
 
@@ -14,9 +14,11 @@
     <div class="wrapper">
         <section class="screen first"></section>
         <section class="screen second"></section>
-        <section class="screen third"></section>
-        <section class="screen third-left"></section>
-        <section class="screen third-right"></section>
+        <section class="screen third">
+            <section class="screen third-left"></section>
+            <section class="screen third-center"></section>
+            <section class="screen third-right"></section>
+        </section>
     </div>
 
     <script src="app.js"></script>
